# neural-data-format

./: README.md  pyproject.toml
neural_data_format/: fit_image.py  models.py  neural_cifar.py  neural_mnist.py  serialize.py  test_dataset.py  utils.py
